Fix alignment of numbers in wizard step indicators

--- a/app/styles/_catalog.less
+++ b/app/styles/_catalog.less
@@ -44,10 +44,6 @@
   }
 }
 
-.pf-wizard-no-back .wizard-pf-footer .btn-cancel {
-  margin-right: 0;
-}
-
 @media(min-width: @screen-sm-min) {
   .catalog-search, .landing-side-bar {
     top: @navbar-os-header-height-desktop + 1; // add 1 for the bottom border
